fixed user data help bubble and fixed radio-to-text spacing

--- a/eucaconsole/static/sass/pages/instance_launch_more.scss
+++ b/eucaconsole/static/sass/pages/instance_launch_more.scss
@@ -15,6 +15,10 @@ form input.name {
     }
 }
 
+#userdatalabel {
+    right: 0px;
+}
+
 #bdmapping-editor {
     .storage-label {
         display: none;
